--- a/index.html
+++ b/index.html
@@ -105,13 +105,15 @@ react-native
 <div class="md-label-header">
 <p><strong>Observations</strong></p>
 </div>
-<div class="md-block-quote">
-<ol>
-<li><em>Observations on sequencing and the app-server</em></li>
-<li><em>Thoughts on how the iOS Xcode requirement on might be breaking or delaying the Android build</em></li>
-<li><em>Discovery of a workaround on the Android side and reasoning on how it might be solve</em></li>
-</ol>
-</div>
+<p>Add the following to
+<a class="md-link-bold" target="_blank" href="observations.html">
+Observations
+</a></p>
+<ul>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Detailed observations on sequencing and the app-server_</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Thoughts on how the iOS Xcode requirement on might be breaking or delaying the Android build_</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Detailed description scovery of a workaround on the Android side and reasoning on how it might be solve_</li>
+</ul>
 <div class="md-label-header">
 <p><strong>Approach</strong></p>
 </div>
