--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ Observations
 <a class="md-link-bold" target="_blank" href="https://developer.apple.com/videos/play/wwdc2018/415/">
 Xcode build sequence
 </a></li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Test <strong>Trident</strong> strategy outlined below</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Asses <strong>Trident</strong> strategy and proceed based on resluts</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Test <strong>Trident strategy</strong> outlined below</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Asses <strong>Trident strategy</strong> and proceed based on resluts</li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> <em>Add todo...continue...</em></li>
 </ul>
 <div class="md-label-header md-label-header-strategy">
