--- a/index.html
+++ b/index.html
@@ -112,21 +112,28 @@ react-native
 </li>
 </ul>
 <div class="md-label-header">
+<header class="md-header">
+<h3>Approach</h3>
+</header>
 <p><strong>Observations</strong></p>
 </div>
 <blockquote>
 <p>Add the following to
 <a class="md-link-bold" target="_blank" href="observations.html">
 Observations
-</a></p>
+</a>
+~ Then proceed to <strong>Stategy</strong> section below</p>
 </blockquote>
 <ul>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Detailed observations on sequencing and the app-server_</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Detailed observations on sequencing and the app-server</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Erorr logs and stack-traces from dev environment</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Bug &#x1F41E; reports on <a href="https://github.com/facebook/react-native/issues">react-native/issues</a></li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Bug &#x1F41E; reports on <a href="https://stackoverflow.com/search?q=macos+react-native+run-android+build+failure">Stack Overflow</a></li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Thoughts on how the iOS Xcode requirement on might be breaking or delaying the Android build_</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Detailed description scovery of a workaround on the Android side and reasoning on how it might be solve_</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"> Detailed description of a workaround on the Android side and reasoning on how it might be solve_</li>
 </ul>
 <div class="md-label-header">
-<p><strong>Approach</strong></p>
+<p><strong>Strategy</strong></p>
 </div>
 <blockquote>
 <p>Separate the Android and iOS app-servers to run separate virtual machines</p>
